# docs/swagger.json
@@ -1110,17 +1110,13 @@
             "type": "object",
             "required": [
                 "captcha",
-                "id",
-                "phoneNumber"
+                "id"
             ],
             "properties": {
                 "captcha": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
-                },
-                "phoneNumber": {
                     "type": "string"
                 }
             }
