# internal/dto/captcha_dto.go
@@ -1,9 +1,8 @@
 package dto
 
 type CaptchaVerifyRequest struct {
-	ID          string `json:"id" binding:"required"`
-	Captcha     string `json:"captcha" binding:"required"`
-	PhoneNumber string `json:"phoneNumber" binding:"required,phoneNumber"`
+	ID      string `json:"id" binding:"required"`
+	Captcha string `json:"captcha" binding:"required"`
 }
 
 // CaptchaResultDTO holds the captcha ID and image in base64
